src/gui/openurljob.cpp
@@ -532,7 +532,7 @@ bool KIO::OpenUrlJobPrivate::handleExecutables(const QMimeType &mimeType)
 void KIO::OpenUrlJobPrivate::executeCommand()
 {
     // Execute the URL as a command. This is how we start scripts and executables
-    KIO::CommandLauncherJob *job = new KIO::CommandLauncherJob(m_url.toLocalFile());
+    KIO::CommandLauncherJob *job = new KIO::CommandLauncherJob(m_url.toLocalFile(), QStringList());
     job->setUiDelegate(q->uiDelegate());
     job->setStartupId(m_startupId);
     job->setWorkingDirectory(m_url.adjusted(QUrl::RemoveFilename).toLocalFile());
